Added @Bean corsConfigurationSource